stress works with two binary

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = env
 	url = git@github.com:riscv/riscv-test-env.git
 	branch = priv-1.10
+[submodule "proc"]
+	path = proc
+	url = git@github.com:khaser/scr1.git
